<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nbelayne.subbook.MainActivity">

    <ListView
        android:id="@+id/subList"
        android:layout_width="403dp"
        android:layout_height="464dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/totalChargeText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="406dp"
        android:layout_height="26dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="4dp" />

    <TextView
        android:id="@+id/totalChargeText"
        android:layout_width="231dp"
        android:layout_height="24dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/monthly_total"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/addSub"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/monthlyCharge"
        android:layout_width="126dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="TextView"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/totalChargeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/totalChargeText" />

    <Button
        android:id="@+id/addSub"
        android:layout_width="405dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:text="@string/sub_button"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="3dp" />

</android.support.constraint.ConstraintLayout>
